[gd_scene load_steps=8 format=3 uid="uid://bx6anv76fwno2"]

[ext_resource type="Script" path="res://scripts/Enemy/enemy.gd" id="1_cal3e"]
[ext_resource type="Texture2D" uid="uid://chewicsrv2m66" path="res://art/UI/PlayerElements/LifeBarMiniUnder.png" id="3_1ts0t"]
[ext_resource type="Texture2D" uid="uid://qsdtsxe6cs0a" path="res://art/UI/PlayerElements/LifeBarMiniProgress.png" id="4_afhuc"]
[ext_resource type="PackedScene" uid="uid://bpqmimumqxoa1" path="res://scenes/Enemy/enemy_attack_area.tscn" id="5_6g1gy"]

[sub_resource type="SpriteFrames" id="SpriteFrames_183qr"]
animations = [{
"frames": [],
"loop": true,
"name": &"aggro",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"attacking",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"corpse",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_kpbn6"]
radius = 88.3629

[sub_resource type="CircleShape2D" id="CircleShape2D_y5t3a"]
radius = 5.09902

[node name="Enemy" type="CharacterBody2D" groups=["enemy"]]
z_index = 1
y_sort_enabled = true
position = Vector2(0, -8)
collision_layer = 2
collision_mask = 3
script = ExtResource("1_cal3e")
knockbackPower = 60
attack_range = 50

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
y_sort_enabled = true
sprite_frames = SubResource("SpriteFrames_183qr")
animation = &"idle"
autoplay = "idle"

[node name="health_bar" type="TextureProgressBar" parent="."]
visibility_layer = 3
z_index = 1
y_sort_enabled = true
offset_left = -9.0
offset_top = -15.0
offset_right = 31.0
offset_bottom = 25.0
texture_under = ExtResource("3_1ts0t")
texture_progress = ExtResource("4_afhuc")

[node name="detection_area" type="Area2D" parent="."]
visible = false
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_area"]
shape = SubResource("CircleShape2D_kpbn6")

[node name="RoamTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="ReturnTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="enemy_body" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, 2)
shape = SubResource("CircleShape2D_y5t3a")

[node name="collision_area" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="enemy_body2" type="CollisionShape2D" parent="collision_area"]
visible = false
position = Vector2(0, 2)
shape = SubResource("CircleShape2D_y5t3a")

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.7
one_shot = true

[node name="AttackRecoveryTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="CanAttackTimer" type="Timer" parent="."]
wait_time = 4.0

[node name="EnemyAttackArea" parent="." instance=ExtResource("5_6g1gy")]
visible = false

[connection signal="area_entered" from="detection_area" to="." method="_on_detection_area_area_entered"]
[connection signal="area_shape_entered" from="detection_area" to="." method="_on_detection_area_area_shape_entered"]
[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detection_area" to="." method="_on_detection_area_body_exited"]
[connection signal="timeout" from="RoamTimer" to="." method="_on_roam_timer_timeout"]
[connection signal="timeout" from="ReturnTimer" to="." method="_on_return_timer_timeout"]
[connection signal="area_entered" from="collision_area" to="." method="_on_collision_area_area_entered"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="AttackRecoveryTimer" to="." method="_on_attack_recovery_timer_timeout"]
[connection signal="timeout" from="CanAttackTimer" to="." method="_on_can_attack_timer_timeout"]
[connection signal="attack_hit_player" from="EnemyAttackArea" to="." method="_on_enemy_attack_area_attack_hit_player"]
